--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "express": "^4.17.1",
+    "jest": "^24.8.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "raf": "^3.4.1",
     "react": "^16.9.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^12.7.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.9.0",
+    "redux": "^4.0.4",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-jest": "^24.9.0"
+  },
+  "jest":{
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
